# SensorPublisher

./: Dockerfile  app.py  docker-compose.yml  publisher.py  pyproject.toml  sensor_data.py  sensordata.py
infra/RoomDataStack/: README.md  template.yml
infra/RoomDataStack/__tests__/unit/handlers/: testpayload.json
infra/RoomDataStack/src/handlers/: sns-payload-logger.js
tests/: test_sensorpublisher.py
